# S_engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
shaders/: default.frag  default.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Window.cpp  Window.h
src/game/: Player.cpp  Player.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/input/: Input.cpp  Input.h
src/resources/: ResouceManager.h  ResourceManager.cpp
src/utils/: common.h  debug.h  errorReporting.cpp  errorReporting.h
